rust/tests/snapshots/help/measurement__signals.snap
---
source: tests/cli/snapshots.rs
---
Measurement signal availability

Usage: vendo measurement signals [OPTIONS] <COMMAND>

Commands:
  list        Per-signal availability summary
  click-path  Click-path signal status — readiness, last-computed, recent SignalEstimates
  help        Print this message or the help of the given subcommand(s)

Options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help
